RecyclerView dos profissionais

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,8 @@
     <string name="app_title">LifeCare</string>
     <string name="logotipo">Logotipo</string>
     <string name="title_activity_agendamento">Agendamento</string>
-    <string name="profissionalButton">Botao do profissional</string>
+    <string name="bookButton">Agendar</string>
+    <string name="ImgProfissional">Imagem do profissional</string>
 
 
 </resources>
