Inicio de edição tela agendamento

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="logotipo">Logotipo</string>
     <string name="title_activity_agendamento">Agendamento</string>
     <string name="profissionalButton">Botao do profissional</string>
-
+    <string name="agendamentoButton">Agendar</string>
+    <string name="loading">Carregando</string>
 
 </resources>
